# scatt

debian/: changelog  control  copyright  rules
src/: .gitignore  CMakeLists.txt  execv-test.c  main.c  remap_pipe.c  remap_pipe.h  scatt-cdrw-helper.c  scatt-dispatcher.c  scatt-stdin-to-ip.c  tcp_connection.c  tcp_connection.h  version.h
tests/: req_TK.sh
